Fixing copy command so it works cross-server and updating composer.json file.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kraken-io/kraken-magento",
+  "name": "sf9/kraken",
   "type": "magento-module",
   "license":"GPL-2.0",
   "description":"Advanced optimization for your Magento JPEG, PNG, GIF and SVG images",
